fix: navbar overflow in mobile view

--- a/src/app/global.scss
+++ b/src/app/global.scss
@@ -10,10 +10,18 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  
+  width: 100svw;
 }
 
 body {
   padding: $body-padding;
+  overflow-x: hidden;
+  overflow-y: scroll;
+
+  width: 100svw;
 }
 
 .page {
